[gd_scene load_steps=9 format=2]

[ext_resource path="res://microjogos/moraguma/candle prick/cenas/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://microjogos/moraguma/candle prick/recursos/sprites/ghost.png" type="Texture" id=2]
[ext_resource path="res://microjogos/moraguma/candle prick/cenas/LightModule.tscn" type="PackedScene" id=3]
[ext_resource path="res://microjogos/moraguma/candle prick/recursos/sounds/move.wav" type="AudioStream" id=4]
[ext_resource path="res://microjogos/moraguma/candle prick/recursos/sounds/nope.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="InteractionHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collide_with_areas = true
collide_with_bodies = false

[node name="LightModule" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="NopeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
